get real location from device

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_button"
-        android:onClick="start"/>
+        android:onClick="fetchLocation"/>
 
     <ImageView
         android:id="@+id/settingsButton"
