--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -79,19 +79,19 @@
         app:layout_constraintTop_toBottomOf="@+id/temp" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="30dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clouds"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="12dp"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/clouds">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/map"
@@ -99,4 +99,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/startDirections"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="12dp"
+        android:onClick="startDirections"
+        android:text="Start Directions"
+        android:textColor="#8A000000"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clouds" />
 </androidx.constraintlayout.widget.ConstraintLayout>
