fix a few minor visual bugs

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#46666E"
+        android:startColor="#EFEFEF"
         android:endColor="#52D3F0"
         android:angle="135"/>
 </shape>
