--- a/app/src/main/res/drawable/ic_button_outline.xml
+++ b/app/src/main/res/drawable/ic_button_outline.xml
@@ -1,6 +1,6 @@
 <vector android:height="446dp" android:viewportHeight="324.86"
     android:viewportWidth="324.86" android:width="446dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#97ddec" android:pathData="M162.43,162.43m-162.43,0a162.43,162.43 0,1 1,324.86 0a162.43,162.43 0,1 1,-324.86 0"/>
+    <path android:fillColor="#3BA1B9" android:pathData="M162.43,162.43m-162.43,0a162.43,162.43 0,1 1,324.86 0a162.43,162.43 0,1 1,-324.86 0"/>
     <path android:fillColor="#25606e" android:pathData="M162.43,162.43m-151.59,0a151.59,151.59 0,1 1,303.18 0a151.59,151.59 0,1 1,-303.18 0"/>
     <path android:fillColor="#97ddec" android:pathData="M62.14,108.05v3.76a9.43,9.43 0,0 0,-3.62 -0.91,3.57 3.57,0 0,0 -1.87,0.45 2,2 0,0 0,-0.93 1.05,14.32 14.32,0 0,0 -0.19,3.14v4h6.23v3.32h-6.23l0,26.52h-3.84L51.69,122.89h-3.92v-3.32h3.92v-4.66a12.81,12.81 0,0 1,0.59 -4.59,4.7 4.7,0 0,1 2,-2.2 6.57,6.57 0,0 1,3.42 -0.84A16.35,16.35 0,0 1,62.14 108.05Z"/>
     <path android:fillColor="#97ddec" android:pathData="M68.82,107.28a3,3 0,0 1,2.23 0.93,3.08 3.08,0 0,1 0.93,2.25 3,3 0,0 1,-0.93 2.22,3.15 3.15,0 0,1 -5.37,-2.22 3.07,3.07 0,0 1,0.92 -2.25A3,3 0,0 1,68.82 107.28ZM66.91,119.57h3.84L70.75,149.43h-3.84Z"/>
